# neo4jshandler

./: .gitignore  CURRENT_STATE.md  Dockerfile  INSTALLATION.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.py
config/: config.env.template  providers.yaml
docs/: QUICKSTART.md  README.md  README_DOCKER.md  api-reference.md  architecture.md  architecture.mmd  deployment.md  setup-guide.md
scripts/: control_panel.py  debug_connection.py  explore_database.py  explore_database_simple.py  migrate_cache.py  test_connection.py
src/graphbot/: __init__.py  cli.py  conftest.py  graphbot.py
src/graphbot/core/: __init__.py  schema_context.py  test_schema_context.py
src/graphbot/handlers/: __init__.py  neo4j_handler.py  test_neo4j_handler.py
src/graphbot/services/: __init__.py  cache_manager.py  context_manager.py  gemini_service.py  insight_agent.py  llm.py  schema_inspector.py  test_cache_manager.py  test_gemini_service.py  test_insight_agent.py  test_llm_factory.py  test_schema_inspector.py  test_unified_llm_service.py  unified_llm_service.py
src/graphbot/utils/: __init__.py  query_builder.py  test_query_builder.py
tests/: test_performance.py
tests/integration/: test_agent_flow.py  test_edge_cases.py  test_unified_flow.py
tests/stack/: test_gemini_service.py  test_insight_agent.py  test_neo4j_handler.py  test_query_builder.py  test_schema_context.py
tests/stress/: stress_schema_mapping.py
tests/unit/core/: test_neo4j_handler.py  test_schema_context.py
tests/unit/services/: test_gemini_service.py  test_insight_agent.py
